After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712354 - error: redefinition of typedef 'EogJob'
error: redefinition of typedef 'EogJob'
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
git master
Other OpenBSD
: Normal normal
: GNOME3.12
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-15 08:04 UTC by Jasper Lievisse Adriaanse
Modified: 2013-11-15 21:14 UTC
See Also:
GNOME target: ---
GNOME version: 3.11/3.12


Attachments
Prevent redefinition of EogJob (772 bytes, patch)
2013-11-15 08:05 UTC, Jasper Lievisse Adriaanse
accepted-commit_now Details | Review

Description Jasper Lievisse Adriaanse 2013-11-15 08:04:31 UTC
On OpenBSD with GCC 4.2.1 the build of EoG fails with the following error:

In file included from eog-image.h:26,
                 from eog-application.c:31:
eog-jobs.h:103: error: redefinition of typedef 'EogJob'
eog-transform.h:11: error: previous declaration of 'EogJob' was here

Given the fact that eog-transform.h already has the guard around the definition of EogJob, perhaps one should be added as well in eog-jobs.h?

Ok to push the attached patch?
Comment 1 Jasper Lievisse Adriaanse 2013-11-15 08:05:34 UTC
Created attachment 259859 [details] [review]
Prevent redefinition of EogJob
Comment 2 Felix Riemann 2013-11-15 17:50:02 UTC
Review of attachment 259859 [details] [review]:

Okay, the previous guard went away with the EogJob refactoring in the last cycle.
Don't know why it didn't make GCC throw up here...
Comment 3 Jasper Lievisse Adriaanse 2013-11-15 21:14:36 UTC
Thanks, pushed to master.