Prevent redeclaration of typedef 'EogJob'.

https://bugzilla.gnome.org/show_bug.cgi?id=712354